# django-apirouter

./: .bumpversion.cfg  .flake8  .gitignore  .readthedocs.yml  CHANGES.md  LICENSE  Makefile  README.md  aasa.py  mkdocs.yml  pyproject.toml  requirements.docs.txt  urls.py
.github/workflows/: tests.yml
apirouter/: __init__.py  conf.py  decorators.py  exception_handler.py  exceptions.py  request.py  response.py  routing.py  types.py  utils.py
docs/: index.md  request.md  routing.md  settings.md
docs/css/: extra.css
tests/: middleware.py  routes.py  settings.py  test_conf.py  test_exception_handler.py  test_exceptions.py  test_request.py  test_response.py  test_routes.py  test_routing.py  test_utils.py  urls.py
tests/routers/: inner.py  method.py  named.py  root.py  test_inner.py  test_method.py  test_root.py
tests/routing/: test_decorators.py  test_exception_handler.py  test_handle.py  test_middleware.py  test_path.py  test_reverse_named.py  test_routes.py
