[tool.poetry]
name = "django-apirouter"
version = "0.1.0"
description = "Django API router"
authors = ["Anton Ruhlov <antonruhlov@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/antonrh/django-apirouter"
keywords = ["django", "api", "rest"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
