[tool.poetry]
name = "django-apirouter"
version = "0.1.0"
description = "Django API router"
authors = ["Anton Ruhlov <antonruhlov@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/antonrh/django-apirouter"
keywords = ["django", "api", "rest"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.8"

[tool.poetry.dev-dependencies]
isort = "^5.1.4"
mypy = "^0.782"
black = "^19.10b0"
flake8 = "^3.8.3"
pytest = "^5.4.3"

[tool.isort]
profile = "black"
src_paths = ["apirouter", "tests"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
