[tool.poetry]
name = "django-apirouter"
version = "0.3.0-dev0"
description = "Django API router"
authors = ["Anton Ruhlov <antonruhlov@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/antonrh/django-apirouter"
keywords = ["django", "api", "rest"]
packages = [
    { include = "apirouter", from = "." },
]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.8"
attrs = "^19.3.0"
mkdocs = {version = "^1.1.2", extras = ["docs"]}
mkdocs-material = {version = "^5.5.0", extras = ["docs"]}
mkdocstrings = {version = "^0.12.2", extras = ["docs"]}

[tool.poetry.dev-dependencies]
isort = "^5.1.4"
mypy = "^0.782"
black = "^19.10b0"
flake8 = "^3.8.3"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
pytest-django = "^3.9.0"
bump2version = "^1.0.0"
safety = "^1.9.0"

[tool.isort]
profile = "black"
combine_as_imports = true
src_paths = ["apirouter", "tests"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
